[gd_scene load_steps=4 format=2]

[ext_resource path="res://examples/neverspring.png" type="Texture" id=1]
[ext_resource path="res://MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 38.0
text = "Bitmap Font Toolbox "
align = 1
valign = 1

[node name="Neverspring" type="TextureRect" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 1010.0
margin_bottom = 522.0
rect_min_size = Vector2( 0, 480 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 526.0
margin_right = 1010.0
margin_bottom = 570.0
custom_constants/separation = 128
alignment = 1

[node name="NProj" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 233.0
margin_right = 437.0
margin_bottom = 44.0
text = "New project"

[node name="LProj" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 776.0
margin_bottom = 44.0
text = "Load project"

[node name="MainFD" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
window_title = "Open a File"
mode = 0
access = 2
show_hidden_files = true

[connection signal="pressed" from="VBoxContainer/HBoxContainer/NProj" to="." method="_on_NProj_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LProj" to="." method="_on_LProj_pressed"]
